# medium-data-bakeoff

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  results.csv
assets/: partition_results.csv  results_50.csv
results/: results.csv
src/medium_data_bakeoff/: __main__.py  bakeoff.py  cli.py  config.py  data.py
src/medium_data_bakeoff/ingredients/: dask.py  dask_auto_optimized.py  dask_auto_optimized_on_ray.py  dask_on_ray.py  dask_sql.py  duckdb.py  modin.py  modin_on_dask.py  polars.py  spark.py  vaex.py
