[tool.poetry]
name = "medium-data-bakeoff"
version = "0.1.0"
description = ""
authors = ["Ethan Rosenthal <ethan@ethanrosenthal.com>"]
packages = [
    { include = "medium_data_bakeoff", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = {extras = ["sql"], version = "^3.4.1"}
dask = {extras = ["dataframe", "distributed"], version = "^2023.8.0"}
polars = "^0.18.15"
duckdb = "^0.8.1"
kaggle = "1.5.*"
loguru = "^0.6.0"
typer = "0.7.*"
ray = {extras = ["default"], version = "^2.6.2"}
pyarrow = "^12.0.1"
matplotlib = "^3.7.2"
modin = {extras = ["ray"], version = "^0.23.0"}
dask-expr = "^0.1.4"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
